# 42minjoy

./: .gitignore  .travis.yml  42minjoy.in1  42minjoy.in2  42minjoy.joy  42minjoy.lib  42minjoy.lst  42minjoy.ses  CMakeLists.txt  LICENSE  README.md  appveyor.yml  demo01.txt  exam01.joy  exam02.joy  exam03.joy  exam04.joy  exam05.joy  exam06.joy  exam07.joy  exam08.joy  exam10.joy  exam11.joy  exam12.joy  exam12.lib  exam13.joy  example.joy  example.lib  example.txt  fib.joy  fib.lib  free.c  gc.c  gc.h  joy.c  joy.vim  makefile  malloc.c  malloc.h  omakefile  (+3 more)
doc/: JOYimplJOY.md
test/: 42minjoy.joy  42minjoy.lib  42minjoy.ses  CMakeLists.txt  exam08.joy  exam09.joy  exam10.joy  exam12.joy  exam13.joy  exam14.joy  exam15.joy  exam16.joy  tutorial.joy
test2/: abs.joy  add.joy  all.joy  and.joy  argv.joy  assign.joy  at.joy  binary.joy  binrec.joy  body.joy  branch.joy  case.joy  casting.joy  char.joy  choice.joy  chr.joy  cleave.joy  compare.joy  concat.joy  cond.joy  condlinrec.joy  condnestrec.joy  cons.joy  construct.joy  dip.joy  div.joy  drop.joy  dup.joy  dupd.joy  enconcat.joy  eql.joy  equal.joy  false.joy  fclose.joy  feof.joy  ferror.joy  fflush.joy  fgetch.joy  fgets.joy  file.joy  (+119 more)
